# STRIDE

./: .gitignore  AGENTS.md  README.md  project.yaml  pyproject.toml
.learnings/: ERRORS.md  LEARNINGS.md
benchmarks/: bench_arm2_path.py  bench_arm3_bootstrap.py  bench_thread_sensitivity.py  bench_uot_solver.py
docs/: api_specs.md  architecture.md  avcp_guidelines.md  constraints.md  data_contracts.md  decisions.md  dev_log.md  index.md  method_overview.md  overall_validation_plan.md  package_api_design.md  package_layout.md  readme.template.md  state.md  stride_design_freeze.md  task_A_arm2_current_conclusion.md  task_A_arm3_coverage_ladder_update_note.md  task_A_arm3_local_manifest.md  task_A_arm3_phase0_3_impl_note.md  task_A_arm3_phase4_impl_note.md  task_A_arm3_phase5_6_impl_note.md  task_A_arm3_phase7_8_patch_note.md  task_A_arm3_phase7_impl_note.md  task_A_arm3_script_skeleton_plan.md  task_A_arm3_skeleton_generation_note.md  task_A_block3_redesign_v1_1.md  task_A_result.md  task_A_results.md  task_A_rewiring_plan.md  task_A_spec.md  task_B_spec.md  task_B_tonic_data_ecosystem_audit.md  task_C_spec.md  task_D_spec.md
tests/: helpers_task_a_fixture.py  test_agent_protocol.py  test_bridge.py  test_observation_balanced_sinkhorn.py  test_round4_core_surface.py  test_stage0_builder.py  test_stage0_extraction.py  test_state_geometry_contract.py  test_stride_api.py  test_stride_da.py  test_stride_da_programs.py  test_stride_deterministic_path.py  test_stride_fit_provenance.py  test_stride_fit_workflow.py  test_stride_full_estimator_objective.py  test_stride_full_estimator_optimizer.py  test_task_a_arm1.py  (+55 more)
(+396 files in other folders)
